// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if empty object props is passed into Network 1`] = `
<DocumentFragment>
  <div
    class="networkContainer"
  >
    <div
      class="Network"
    >
      <svg
        data-testid="networkCanvas"
        id="networkCanvas"
      >
        <g
          transform="translate(0, 0), scale(1)"
        >
          <defs>
            <marker
              id="arrowhead"
              markerHeight="7"
              markerWidth="7"
              orient="auto"
              refX="13"
              refY="0"
              viewBox="-0 -5 10 10"
              xoverflow="visible"
            >
              <path
                d="M 0,-5 L 10 ,0 L 0,5"
                fill="#474747"
                style="stroke: none;"
              />
            </marker>
          </defs>
        </g>
      </svg>
    </div>
    <input
      id="networkSearch"
      placeholder="search for atoms..."
      type="text"
      value=""
    />
    <div
      class="AtomNetworkLegend"
    >
      <div
        class="AtomLegend"
      />
      <p>
        ATOM
      </p>
      <div
        class="SelectorLegend"
      />
      <p>
        SELECTOR
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`if mock data object prop is passed into Network 1`] = `
<DocumentFragment>
  <div
    class="networkContainer"
  >
    <div
      class="Network"
    >
      <svg
        data-testid="networkCanvas"
        id="networkCanvas"
      >
        <g
          transform="translate(0, 0), scale(1)"
        >
          <defs>
            <marker
              id="arrowhead"
              markerHeight="7"
              markerWidth="7"
              orient="auto"
              refX="13"
              refY="0"
              viewBox="-0 -5 10 10"
              xoverflow="visible"
            >
              <path
                d="M 0,-5 L 10 ,0 L 0,5"
                fill="#474747"
                style="stroke: none;"
              />
            </marker>
          </defs>
          <line
            class="link"
            marker-end="url(#arrowhead)"
          >
            <title />
          </line>
          <line
            class="link"
            marker-end="url(#arrowhead)"
          >
            <title />
          </line>
          <line
            class="link"
            marker-end="url(#arrowhead)"
          >
            <title />
          </line>
          <path
            class="edgepath"
            fill-opacity="1.0"
            id="edgepath0"
            stroke-opacity="1.0"
            style="pointer-events: none; fill: #474747; stroke: #474747; stroke-width: 1px;"
          />
          <path
            class="edgepath"
            fill-opacity="1.0"
            id="edgepath1"
            stroke-opacity="1.0"
            style="pointer-events: none; fill: #474747; stroke: #474747; stroke-width: 1px;"
          />
          <path
            class="edgepath"
            fill-opacity="1.0"
            id="edgepath2"
            stroke-opacity="1.0"
            style="pointer-events: none; fill: #474747; stroke: #474747; stroke-width: 1px;"
          />
          <text
            class="edgelabel"
            font-size="10"
            id="edgelabel0"
            style="pointer-events: none;"
          >
            <textpath
              href="#edgepath0"
              startOffset="50%"
              style="text-anchor: middle; pointer-events: none;"
            />
          </text>
          <text
            class="edgelabel"
            font-size="10"
            id="edgelabel1"
            style="pointer-events: none;"
          >
            <textpath
              href="#edgepath1"
              startOffset="50%"
              style="text-anchor: middle; pointer-events: none;"
            />
          </text>
          <text
            class="edgelabel"
            font-size="10"
            id="edgelabel2"
            style="pointer-events: none;"
          >
            <textpath
              href="#edgepath2"
              startOffset="50%"
              style="text-anchor: middle; pointer-events: none;"
            />
          </text>
          <g
            class="node"
          >
            <circle
              r="5"
              style="fill: #9580FF;"
            />
            <title>
              0
            </title>
            <text
              dy="-3"
              fill="#646464"
              stroke="none"
            >
              dummyAtom1
            </text>
          </g>
          <g
            class="node"
          >
            <circle
              r="5"
              style="fill: #9580FF;"
            />
            <title>
              1
            </title>
            <text
              dy="-3"
              fill="#646464"
              stroke="none"
            >
              listState
            </text>
          </g>
          <g
            class="node"
          >
            <circle
              r="5"
              style="fill: #9580FF;"
            />
            <title>
              2
            </title>
            <text
              dy="-3"
              fill="#646464"
              stroke="none"
            >
              listState2
            </text>
          </g>
          <g
            class="node"
          >
            <circle
              r="5"
              style="fill: #FF80BF;"
            />
            <title>
              3
            </title>
            <text
              dy="-3"
              fill="#646464"
              stroke="none"
            >
              selectorTest
            </text>
          </g>
          <g
            class="node"
          >
            <circle
              r="5"
              style="fill: #FF80BF;"
            />
            <title>
              4
            </title>
            <text
              dy="-3"
              fill="#646464"
              stroke="none"
            >
              stateLengths
            </text>
          </g>
        </g>
      </svg>
    </div>
    <input
      id="networkSearch"
      placeholder="search for atoms..."
      type="text"
      value=""
    />
    <div
      class="AtomNetworkLegend"
    >
      <div
        class="AtomLegend"
      />
      <p>
        ATOM
      </p>
      <div
        class="SelectorLegend"
      />
      <p>
        SELECTOR
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders & matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="networkContainer"
  >
    <div
      class="Network"
    >
      <svg
        data-testid="networkCanvas"
        id="networkCanvas"
      >
        <g
          transform="translate(0, 0), scale(1)"
        >
          <defs>
            <marker
              id="arrowhead"
              markerHeight="7"
              markerWidth="7"
              orient="auto"
              refX="13"
              refY="0"
              viewBox="-0 -5 10 10"
              xoverflow="visible"
            >
              <path
                d="M 0,-5 L 10 ,0 L 0,5"
                fill="#474747"
                style="stroke: none;"
              />
            </marker>
          </defs>
        </g>
      </svg>
    </div>
    <input
      id="networkSearch"
      placeholder="search for atoms..."
      type="text"
      value=""
    />
    <div
      class="AtomNetworkLegend"
    >
      <div
        class="AtomLegend"
      />
      <p>
        ATOM
      </p>
      <div
        class="SelectorLegend"
      />
      <p>
        SELECTOR
      </p>
    </div>
  </div>
</DocumentFragment>
`;
